# booking-project

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
reservations/: admin.py  models.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
templates/: base.html  index.html
